faktory-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faktory-workers
  labels:
    app: faktory-workers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faktory-workers
  template:
    metadata:
      labels:
        app: faktory-workers
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: faktory-workers
        image: docker.io/neptuneg/faktory-workers:latest
        resources:
          limits:
            memory: 128Mi
            cpu: "0.3"
          requests:
            memory: 64Mi
            cpu: "0.1"
