faktory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faktory
  labels:
    app: faktory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faktory
  template:
    metadata:
      labels:
        app: faktory
    spec:
      containers:
      - name: faktory
        image: contribsys/faktory:latest
        ports:
        - containerPort: 7419
        - containerPort: 7420
        resources:
          limits:
            memory: 128Mi
            cpu: "0.3"
          requests:
            memory: 64Mi
            cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: faktory
spec:
  type: ClusterIP
  selector:
    app: faktory
  ports:
    - name: service
      protocol: TCP
      port: 7419
      targetPort: 7419
    - name: web-ui
      protocol: TCP
      port: 7420
      targetPort: 7420
