live.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live
  labels:
    app: live
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live
  template:
    metadata:
      labels:
        app: live
    spec:
      containers:
      - name: live
        image: docker.io/neptuneg/live-service:latest
        ports:
        - containerPort: 3377
        resources:
          limits:
            memory: 128Mi
            cpu: "0.3"
          requests:
            memory: 64Mi
            cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: live
spec:
  type: ClusterIP
  selector:
    app: live
  ports:
    - protocol: TCP
      port: 3377
      targetPort: 3377
