redis-mq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-mq
  labels:
    app: redis-mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-mq
  template:
    metadata:
      labels:
        app: redis-mq
    spec:
      containers:
      - name: redis-mq
        image: redis:6.2.6-alpine3.14
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: 128Mi
            cpu: "0.3"
          requests:
            memory: 64Mi
            cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: redis-mq
spec:
  type: ClusterIP
  selector:
    app: redis-mq
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
