user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: docker.io/neptuneg/user-service:latest
        ports:
        - containerPort: 3377
        resources:
          limits:
            memory: 128Mi
            cpu: "0.3"
          requests:
            memory: 64Mi
            cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3377
      targetPort: 3377
