gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: docker.io/neptuneg/gateway-service:latest
        ports:
        - containerPort: 4000
        resources:
          limits:
            memory: 128Mi
            cpu: "0.3"
          requests:
            memory: 64Mi
            cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
    - http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 4000
